mcp-config/mcp-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: agentgateway
  namespace: mcp
spec:
  gatewayClassName: agentgateway
  listeners:
  - protocol: HTTP
    port: 3000
    name: http
  - protocol: HTTP
    port: 3001
    name: http-1
# ---
# apiVersion: agentgateway.dev/v1alpha1
# kind: AgentgatewayParameters
# metadata:
#   name: agentgateway
#   namespace: mcp
# spec:
#   image:
#     registry: ghcr.io/agentgateway
#     tag: "0.12.0"
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: GatewayClass
# metadata:
#   name: agentgateway
# spec:
#   controllerName: agentgateway.dev/agentgateway
#   description: Specialized class for agentgateway.
#   parametersRef:
#     kind: AgentgatewayParameters
#     group: agentgateway.dev
#     name: agentgateway
#     namespace: mcp
