mcp-config/mcp-backends.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-route-3000
  namespace: mcp
spec:
  parentRefs:
  - name: agentgateway
    namespace: mcp
    port: 3000
  rules:
    - backendRefs:
      - name: mcp-backends
        group: agentgateway.dev
        kind: AgentgatewayBackend
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: http-route-3001
#   namespace: mcp
# spec:
#   parentRefs:
#   - name: agentgateway
#     namespace: mcp
#     port: 3001
#   rules:
#     - backendRefs:
#       - name: backend
#         namespace: default
#         port: 3001
